# krutidevHindiTypingTest

./: .gitignore  Cargo.toml  README.md  hindi-words.txt
src/: app.rs  db.rs  main.rs  models.rs
